--- a/src/main/resources/static/assets/style.css
+++ b/src/main/resources/static/assets/style.css
@@ -2347,7 +2347,7 @@ ul.filtering-menu{
 }
 .product-single-sidebar ul li a span{}
 .product-single-sidebar ul li a:hover{
-	color:#FF4F4F;
+	color::rgb(142, 116, 77);
 }
 .product-single-sidebar ul li a i{
 	float:right;
@@ -2392,7 +2392,7 @@ ul.filtering-menu{
 	display: none;
 }
 .cheker span{
-	background: rgba(0, 0, 0, 0) url("img/sprite.png") no-repeat scroll 0px -257px;
+	background: grey url("img/sprite.png") no-repeat scroll 0px -257px;
 	display: block;
 	height: 15px;
 	width: 15px;
