--- a/src/main/resources/static/layout/header.html
+++ b/src/main/resources/static/layout/header.html
@@ -123,7 +123,7 @@
                             </li>
 
                             <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
-                            <li><a href="#checkout">GIỎ HÀNG</a></li>
+                            <li><a href="#cart">GIỎ HÀNG</a></li>
                             <li><a href="#login">ĐĂNG NHẬP</a></li>
                             <li><a href="#signup">ĐĂNG KÝ</a></li>
                         </ul>
@@ -135,7 +135,7 @@
                             </li>
 
                             <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
-                            <li><a href="#checkout">GIỎ HÀNG </a></li>
+                            <li><a href="#cart">GIỎ HÀNG </a></li>
                             <li >
                                 <ul class="dropdown" style=" list-style: none;">
                                     <li style="color: black;font-weight: bold;text-decoration: none;">TÀI KHOẢN</li>
