--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -141,7 +141,14 @@
     <span th:if="${sortField == fieldDonHang}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
-
+<th th:fragment="khachhang_link(fieldKhachHang, columnLabel)">
+    <a style="text-decoration: none; color: black"
+       th:href="@{'/admin/customers/page/' + ${currentPage} + '?sortField=' + ${fieldKhachHang} + '&sortDir=' + ${sortField != fieldKhachHang ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+        [[${columnLabel}]]
+    </a>
+    <span th:if="${sortField == fieldKhachHang}" style="text-decoration: none; color: black"
+          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+</th>
 
 <!-- fragment cho phân trang-->
 <a th:fragment="pagecategory_link(pageNum, label)"
@@ -219,5 +226,8 @@
 <a th:fragment="page_donhang_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/don-hang/page/' + ${pageNum}}"> [[${label}]]</a>
+<a th:fragment="pagecustomer_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/customers/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
 </body>
 </html>
