--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -66,6 +66,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Nhân viên
                     </a>
+                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khách Hàng
+                    </a>
                     <a class="nav-link collapsed" id="cautruckhuy" th:href="@{/admin/cautruckhuy}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Cấu trúc khuy
@@ -85,7 +89,6 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Xẻ tà
                     </a>
-
                     <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Lớp Lót</a>
