--- a/src/main/resources/static/layout/header.html
+++ b/src/main/resources/static/layout/header.html
@@ -117,7 +117,7 @@
                     <nav>
                         <ul class="list-inline" ng-if="currentUser.username == null">
                             <li class="active"><a href="#index" style="">TRANG CHỦ</a> </li>
-                             <li><a href="#">MAY ĐO ONLINE</a></li>
+                             <li><a href="#mayonline1">MAY ĐO ONLINE</a></li>
                             <li>
                                 <a href="#sanpham">SẢN PHẨM</a>
                             </li>
@@ -129,7 +129,7 @@
                         </ul>
                         <ul class="list-inline" ng-if="currentUser.username != null">
                             <li class="active"><a href="#index">TRANG CHỦ</a> </li>
-                            <li><a href="#">MAY ĐO ONLINE</a></li>
+                            <li><a href="#mayonline1">MAY ĐO ONLINE</a></li>
                             <li>
                                 <a href="#sanpham">SẢN PHẨM</a>
                             </li>
