--- a/src/main/resources/static/layout/header.html
+++ b/src/main/resources/static/layout/header.html
@@ -122,7 +122,7 @@
                                 <a href="#sanpham">SẢN PHẨM</a>
                             </li>
 
-                            <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
+                            <li> <a href="#chinhsach1">CHÍNH SÁCH</a></li>
                             <li><a href="#cart">GIỎ HÀNG</a></li>
                             <li><a href="#login">ĐĂNG NHẬP</a></li>
                             <li><a href="#signup">ĐĂNG KÝ</a></li>
@@ -134,7 +134,7 @@
                                 <a href="#sanpham">SẢN PHẨM</a>
                             </li>
 
-                            <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
+                            <li> <a href="#chinhsach1">CHÍNH SÁCH</a></li>
                             <li><a href="#cart">GIỎ HÀNG </a></li>
                             <li >
                                 <ul class="dropdown" style=" list-style: none;">
