--- a/src/main/resources/templates/admin/thongke/sales_report_by_date.html
+++ b/src/main/resources/templates/admin/thongke/sales_report_by_date.html
@@ -39,7 +39,7 @@
         <div class="col-sm-2">
             <div class="card">
                 <div class="card-header">
-                    <b>Doanh Thu Thuần</b>
+                    <b>Doanh Thu</b>
                 </div>
                 <div class="card-body">
                     <span class="h3" th:id="'textTotalNetSales' + ${reportType}"></span>
@@ -47,16 +47,16 @@
             </div>
         </div>
 
-        <div class="col-sm-2">
-            <div class="card">
-                <div class="card-header">
-                    <b>Trung bình Tổng Doanh Thu</b>
-                </div>
-                <div class="card-body">
-                    <span class="h3" th:id="'textAvgGrossSales' + ${reportType}"></span>
-                </div>
-            </div>
-        </div>
+<!--        <div class="col-sm-2">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <b>Trung bình Tổng Doanh Thu</b>-->
+<!--                </div>-->
+<!--                <div class="card-body">-->
+<!--                    <span class="h3" th:id="'textAvgGrossSales' + ${reportType}"></span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="col-sm-2">
             <div class="card">
