--- a/src/main/resources/templates/admin/thongke/sales_report_by_status.html
+++ b/src/main/resources/templates/admin/thongke/sales_report_by_status.html
@@ -134,7 +134,7 @@
             </div>
 
             <div class="text-center m-1" th:if="${totalItem > 0}">
-                <span>Hiển thị Đơn Hàng # [[${startCount}]] to [[${endCount}]] of [[${totalItem}]] </span>
+<!--                <span>Hiển thị Đơn Hàng # [[${startCount}]] to [[${endCount}]] of [[${totalItem}]] </span>-->
             </div>
             <div class="text-center m-1" th:unless="${totalItem > 0}">
                 <span>Không có Đơn Hàng trang này</span>
