--- a/src/main/resources/templates/admin/thongke/statisticals.html
+++ b/src/main/resources/templates/admin/thongke/statisticals.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>
+<!--                    <a class="nav-link" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>-->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="tab" href="#product" role="tab">Thống kê theo Sản Phẩm</a>
