--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -11,6 +11,7 @@
     <link th:href="@{/css/bootstrap.min.css}">
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
     <link th:href="@{https://use.fontawesome.com/releases/v6.3.0/css/all.css}" crossorigin="anonymous">
+    <link th:href="@{https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css}" crossorigin="anonymous">
     <script th:src="@{https://code.jquery.com/jquery-3.6.0.min.js}"></script>
     <script th:src="@{https://use.fontawesome.com/releases/v6.3.0/js/all.js}" crossorigin="anonymous"></script>
     <script th:src="@{https://cdn.jquery.com/jquery-3.7.0.js}" crossorigin="anonymous"></script>
