--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -11,7 +11,7 @@
                 class="fas fa-bars"></i></button>
         <!-- Input Box in the Middle -->
         <div class="d-flex mx-auto">
-            <input type="text"
+            <input type="text" id="searchInput"
                    style="background-color: transparent; border: 1px solid white; color: white; width: 500px;"
                    class="form-control" placeholder="Search..."/>
             <i class="m-2 fa-regular fa-circle-question fa-flip fa-xl" style="color: #f5f5f5;"></i>
@@ -42,9 +42,11 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Menu</div>
+
+
                     <a class="nav-link collapsed" id="categories" th:href="@{/admin/categories}">
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
-                        Dạnh mục
+                        Danh mục
                     </a>
                     <a class="nav-link collapsed" id="products" th:href="@{/admin/products}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
@@ -123,3 +125,23 @@
     </div>
 </div>
 </body>
+<!-- Script for searching menu items -->
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var searchInput = document.getElementById('searchInput');
+        var menuItems = document.getElementsByClassName('nav-link');
+
+        searchInput.addEventListener('input', function () {
+            var searchTerm = searchInput.value.toLowerCase();
+
+            for (var i = 0; i < menuItems.length; i++) {
+                var menuItemText = menuItems[i].innerText.toLowerCase();
+                if (menuItemText.includes(searchTerm)) {
+                    menuItems[i].style.display = 'block';
+                } else {
+                    menuItems[i].style.display = 'none';
+                }
+            }
+        });
+    });
+</script>
