--- a/src/main/resources/templates/admin/madinhdanh/madinhdanh.html
+++ b/src/main/resources/templates/admin/madinhdanh/madinhdanh.html
@@ -19,21 +19,7 @@
       <div th:if="${message != null}" class="alert alert-success text-center">
         [[${message}]]
       </div>
-
-
-      <div style="display: flex;">
-        <form th:action="@{/admin/ma-dinh-danh/page/0}" class="form-inline m-3">
-          <div class="d-flex align-items-center">
-            <label class="sr-only">Tìm Kiếm</label>
-            <input style="width: 250px; margin-right: 10px" type="search" id="keywordMD" name="keyword" th:value="${keyword}" placeholder="Nhập mã bạn muốn tìm" class="form-control" />
-            <input style="margin-right: 10px" type="submit" value="Search" class="btn btn-primary ml-2" />
-            <input type="button" value="Clear" class="btn btn-secondary ml-2" id = "clean"/>
-          </div>
-        </form>
-      </div>
-
-      <div class="full-details">
-        <table class="table table-bordered table-striped table-hover table-responsive-xl">
+        <table  id="example" class="table table-bordered table-striped table-hover table-responsive-xl">
           <thead class="thead-dark">
           <tr>
             <th>ID</th>
@@ -69,23 +55,19 @@
           </tr>
           </tbody>
         </table>
-      </div>
-
-      <div class="text-center m-1" th:if="${totalItem > 0}">
-        <span>Hiển thị Mã Định Danh # [[${startCount}]] to [[${endCount}]] of [[${totalItem}]] </span>
-      </div>
-      <div class="text-center m-1" th:unless="${totalItem > 0}">
-        <span>Không có Mã Định Danh hiển thị</span>
-      </div>
     </main>
   </div>
 </div>
 </body>
+
 <script>
-  const imeiInput = document.getElementById("imeiInput");
-  const clearButton = document.getElementById("clearButton");
-  clean.addEventListener("click",()=>{
-    keywordMD.value = "";
-  })
+  $('#example').DataTable();
 </script>
+<!--<script>-->
+<!--  const imeiInput = document.getElementById("imeiInput");-->
+<!--  const clearButton = document.getElementById("clearButton");-->
+<!--  clean.addEventListener("click",()=>{-->
+<!--    keywordMD.value = "";-->
+<!--  })-->
+<!--</script>-->
 </html>
