--- a/src/main/resources/templates/admin/madinhdanh/madinhdanh_form.html
+++ b/src/main/resources/templates/admin/madinhdanh/madinhdanh_form.html
@@ -9,7 +9,7 @@
     <div id="layoutSidenav_content">
         <main style="margin-left: 10px">
             <div>
-                <h2>Quản lý mã định danh chi tiết sản phẩm | [[${pageTitle}]]</h2>
+                <h2>Quản lý mã định danh chi tiết sản phẩm </h2>
             </div>
 
             <form th:action="@{/admin/ma-dinh-danh/importExcept}" method="POST" enctype="multipart/form-data"
@@ -40,7 +40,7 @@
                     </div>
                     <div class="text-center">
                         <input type="submit" value="Save" class="btn btn-primary m-3" id="submitButton"/>
-                        <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel">
+                        <a th:href="@{/admin/ma-dinh-danh}" type="button" class="btn btn-secondary">Cancel</a>
                     </div>
                 </div>
             </form>
