--- a/src/main/resources/templates/admin/thongke/statisticals.html
+++ b/src/main/resources/templates/admin/thongke/statisticals.html
@@ -86,7 +86,7 @@
 <script type="text/javascript" th:src="@{/sales_report_common.js}"></script>
 <script type="text/javascript"
         th:src="@{/sales_report_by_orderdetail.js}"></script>
-<script type="text/javascript" th:src="@{/static/sale_report_by_date.js}"></script>
+<script type="text/javascript" th:src="@{/sale_report_by_date.js}"></script>
 
 <script type="text/javascript"
         th:src="@{/sales_report_by_category.js}"></script>
