--- a/src/main/resources/templates/admin/thongke/statisticals.html
+++ b/src/main/resources/templates/admin/thongke/statisticals.html
@@ -29,12 +29,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" data-bs-toggle="tab" href="#orderdetail" role="tab">Thống kê Hóa đơn</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>
-                </li>
-                <li class="nav-item">
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
 <!--                    <a class="nav-link" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>-->
-                </li>
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="tab" href="#product" role="tab">Thống kê theo Sản Phẩm</a>
                 </li>
