--- a/src/main/resources/templates/admin/thongke/sales_report_by_date.html
+++ b/src/main/resources/templates/admin/thongke/sales_report_by_date.html
@@ -25,18 +25,18 @@
     </form>
 
     <div class="row justify-content-center">
-        <div class="col-sm-4" >
-            <div class="card">
-                <div class="card-header">
-                    <b>Tổng Doanh Thu</b>
-                </div>
-                <div class="card-body">
-                    <span class="h3" th:id="'textTotalGrossSales' + ${reportType}"></span>
-                </div>
-            </div>
-        </div>
+<!--        <div class="col-sm-4" >-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <b>Tổng Doanh Thu</b>-->
+<!--                </div>-->
+<!--                <div class="card-body">-->
+<!--                    <span class="h3" th:id="'textTotalGrossSales' + ${reportType}"></span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             <div class="card">
                 <div class="card-header">
                     <b>Doanh Thu</b>
