--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -139,6 +139,13 @@
 </script>
 
 <script src="/assets/js/main.js"></script>
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+        intent="WELCOME"
+        chat-title="SD-35-The-Suit-House"
+        agent-id="1ffff30b-6b23-4c6c-935b-d31f512a74b7"
+        language-code="vi"
+></df-messenger>
 </body>
 
 </html>
