--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -42,82 +42,83 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Menu</div>
-
+                    <a class="nav-link collapsed" id="ban-hang" th:href="@{/admin/ban-hang}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+                        Bán hàng
+                    </a>
 
                     <a class="nav-link collapsed" id="categories" th:href="@{/admin/categories}">
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Danh mục
                     </a>
                     <a class="nav-link collapsed" id="products" th:href="@{/admin/products}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Sản phẩm
                     </a>
-                    <a class="nav-link collapsed" id="ban-hang" th:href="@{/admin/ban-hang}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Bán hàng
-                    </a>
-                    <a class="nav-link collapsed" id="productDetails" th:href="@{/admin/productDetails}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                    <a class="nav-link collapsed" id="productDetails" th:href="@{/admin/productDetails}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Chi tiết sản phẩm
                     </a>
-                    <a class="nav-link collapsed" id="seri" th:href="@{/admin/ma-dinh-danh}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                    <a class="nav-link collapsed" id="seri" th:href="@{/admin/ma-dinh-danh}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Mã định danh
                     </a>
                     <a class="nav-link collapsed" id="users" th:href="@{/admin/users}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Nhân viên
                     </a>
-                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Khách Hàng
                     </a>
+                    <a class="nav-link collapsed" id="don-hang" th:href="@{/admin/don-hang}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+                        Đơn hàng
+                    </a>
+                    <a class="nav-link collapsed" id="statisticals" th:href="@{/admin/statisticals}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+                        Thống Kê
+                    </a>
+                    <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+                        Khuyến mại</a>
                     <a class="nav-link collapsed" id="cautruckhuy" th:href="@{/admin/cautruckhuy}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Cấu trúc khuy
                     </a>
                     <a class="nav-link collapsed" id="veao" th:href="@{/admin/veao}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Ve áo</a>
-                    <a class="nav-link collapsed" id="materials" th:href="@{/admin/chatlieu}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                    <a class="nav-link collapsed" id="materials" th:href="@{/admin/chatlieu}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Chất Liệu
                     </a>
+
                     <a class="nav-link collapsed" id="colors" th:href="@{/admin/colors}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Màu sắc
                     </a>
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Xẻ tà
                     </a>
                     <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Lớp Lót</a>
                     <a class="nav-link collapsed" id="" th:href="@{/admin/design}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Họa tiết</a>
-                    <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Khuyến mại</a>
+
                     <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         kích cỡ
                     </a>
                     <a class="nav-link collapsed" id="kieudet" th:href="@{/admin/kieudet}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Kiểu dệt</a>
                     <a class="nav-link collapsed" id="kieutui" th:href="@{/admin/kieutui}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         kiểu túi
-                    </a>
-                    <a class="nav-link collapsed" id="don-hang" th:href="@{/admin/don-hang}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Đơn hàng
-                    </a>
-                    <a class="nav-link collapsed" id="statisticals" th:href="@{/admin/statisticals}" >
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Thống Kê
                     </a>
                 </div>
             </div>
