--- a/src/main/resources/templates/admin/thongke/statisticals.html
+++ b/src/main/resources/templates/admin/thongke/statisticals.html
@@ -7,36 +7,21 @@
 <div th:replace="admin/fragment/navigation:: navbar"></div>
 <div id="layoutSidenav">
     <div th:replace="admin/fragment/navigation:: menu"></div>
-    <!-- Navbar-->
-    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">Settings</a></li>
-                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item"  th:href="@{/admin/logout}">Logout</a></li>
-            </ul>
-        </li>
-    </ul>
-</nav>
-<div id="layoutSidenav">
-    <div th:replace="admin/fragment/navigation:: menu"></div>
     <div><h2>Thống kê</h2></div>
     <div id="layoutSidenav_content">
         <main>
-            <ul class="nav nav-tabs" id="reportTab" role="tablist">
+            <ul class="nav nav-tabs"  id="reportTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" data-bs-toggle="tab" href="#orderdetail" role="tab">Thống kê Hóa đơn</a>
+                    <a class="nav-link active btn btn-outline-primary" data-bs-toggle="tab" href="#orderdetail" role="tab">Thống kê Hóa đơn</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>-->
-<!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#product" role="tab">Thống kê theo Sản Phẩm</a>
+                    <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#product" role="tab">Thống kê theo Sản Phẩm</a>
                 </li>
             </ul>
 
@@ -58,7 +43,6 @@
                 </div>
             </div>
         </main>
-
     </div>
 </div>
 
@@ -92,6 +76,6 @@
         th:src="@{/sales_report_by_category.js}"></script>
 <script type="text/javascript"
         th:src="@{/sales_report_by_product.js}"></script>
-</div>
+
 </body>
 </html>
